RESOLVED FIXED139181
[GStreamer] Media Source sending seek event fails.
https://bugs.webkit.org/show_bug.cgi?id=139181
Summary [GStreamer] Media Source sending seek event fails.
Bartlomiej Gajda
Reported 2014-12-02 04:57:12 PST
There were callbacks connected to app_src on 'seek', but if stream type was not seekable, they would never launch.
Attachments
sets the app_src stream type in WebKitMediaSourceGStreamer to seekable. (1.88 KB, patch)
2014-12-02 05:00 PST, Bartlomiej Gajda
no flags
sets the stream type to seekable, changed patch name (1.91 KB, patch)
2014-12-02 08:12 PST, Bartlomiej Gajda
no flags
Bartlomiej Gajda
Comment 1 2014-12-02 05:00:13 PST
Created attachment 242401 [details] sets the app_src stream type in WebKitMediaSourceGStreamer to seekable. this will fix it.
Philippe Normand
Comment 2 2014-12-02 05:23:55 PST
Comment on attachment 242401 [details] sets the app_src stream type in WebKitMediaSourceGStreamer to seekable. View in context: https://bugs.webkit.org/attachment.cgi?id=242401&action=review > Source/WebCore/ChangeLog:3 > + [GStreamer] To receive seek signal, we need to set app_src stream type to seekable. This bug title could be improved I think... How about [GStreamer] MediaSource seeking fails ... ? That's the symptom, right?
Bartlomiej Gajda
Comment 3 2014-12-02 08:07:22 PST
Does [GStreamer] Media Source sending seek event fails. sounds better? I'm not sure will everything work since this, but without it MediaPlayerPrivateGStreamer::doSeek() will fail.
Bartlomiej Gajda
Comment 4 2014-12-02 08:12:53 PST
Created attachment 242408 [details] sets the stream type to seekable, changed patch name Changed name accordingly.
WebKit Commit Bot
Comment 5 2014-12-02 09:07:07 PST
Comment on attachment 242408 [details] sets the stream type to seekable, changed patch name Clearing flags on attachment: 242408 Committed r176664: <http://trac.webkit.org/changeset/176664>
WebKit Commit Bot
Comment 6 2014-12-02 09:07:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.