[GStreamer] Media Source sending seek event fails. https://bugs.webkit.org/show_bug.cgi?id=139181

Patch by Bartlomiej Gajda <b.gajda@samsung.com> on 2014-12-02
Reviewed by Philippe Normand.

There were callbacks connected to app_src on 'seek', but if stream type is not seekable, they would never launch,
and seeking (as in MediaPlayerPrivateGStreamer::doSeek) fails.

No new tests needed.

* platform/graphics/gstreamer/WebKitMediaSourceGStreamer.cpp:
(webkit_media_src_init):

Canonical link: https://commits.webkit.org/157016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176664 268f45cc-cd09-0410-ab3c-d52691b4dbfc